.archive/matrix-synapse/app/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: zerossl-production
    external-dns-cf/is-dns-public: "true"
    external-dns-cf/is-public: "true"
    external-dns.target/enabled: "true"
    meta.helm.sh/release-name: matrix-synapse
    meta.helm.sh/release-namespace: comms
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/instance: matrix-synapse
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/version: 1.126.0
    helm.sh/chart: matrix-synapse-3.11.5
    helm.toolkit.fluxcd.io/name: matrix-synapse
    helm.toolkit.fluxcd.io/namespace: comms
  name: matrix-synapse-int
  namespace: comms
spec:
  ingressClassName: internal-nginx
  rules:
    - host: skylab.fi
      http:
        paths:
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/event/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/state/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/state_ids/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/backfill/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/get_missing_events/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/publicRooms
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/query/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/make_join/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/make_leave/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/(v1|v2)/send_join/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/(v1|v2)/send_leave/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/(v1|v2)/invite/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/event_auth/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/exchange_third_party_invite/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/user/devices/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/key/v2/query
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/hierarchy/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/federation/v1/send/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_matrix/media/.*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_matrix/federation/v1/media/.*$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse
                port:
                  number: 8008
            path: /_matrix
            pathType: Prefix
          - backend:
              service:
                name: matrix-synapse-wellknown-lighttpd
                port:
                  number: 80
            path: /.well-known/matrix
            pathType: Prefix
    - host: matrix.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/createRoom$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/publicRooms$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/joined_members$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/context/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/members$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/state$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/v1/rooms/.*/hierarchy$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/unstable/org.matrix.msc2716/rooms/.*/batch_send$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/unstable/im.nheko.summary/rooms/.*/summary$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(r0|v3|unstable)/account/3pid$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(r0|v3|unstable)/account/whoami$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(r0|v3|unstable)/devices$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/versions$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/voip/turnServer$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/event/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/joined_rooms$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/search$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(r0|v3|unstable)/keys/query$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(r0|v3|unstable)/keys/changes$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(r0|v3|unstable)/keys/claim$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(r0|v3|unstable)/room_keys/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/login$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(r0|v3|unstable)/register$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/v1/register/m.login.registration_token/validity$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/redact
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/send
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/state/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/(join|invite|leave|ban|unban|kick)$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/join/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3|unstable)/profile/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-generic-worker
                port:
                  number: 8083
            path: /_matrix/client/(r0|v3|unstable)/user_directory/search
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_matrix/media/.*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/purge_media_cache$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/room/.*/media
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/user/.*/media
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/media/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/quarantine_media/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/users/.*/media$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-media-repository
                port:
                  number: 8083
            path: /_matrix/client/v1/media/.*$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-synchrotron
                port:
                  number: 8083
            path: /_matrix/client/(v2_alpha|r0|v3)/sync$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-synchrotron
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|v2_alpha|r0|v3)/events$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-synchrotron
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3)/initialSync$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse-synchrotron
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3)/rooms/[^/]+/initialSync$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: matrix-synapse
                port:
                  number: 8008
            path: /_matrix
            pathType: Prefix
  tls:
    - hosts:
        - skylab.fi
        - matrix.skylab.fi
      secretName: matrix-tls
